--- a/landing-page/public/css/landing-page.css
+++ b/landing-page/public/css/landing-page.css
@@ -124,6 +124,9 @@ h6 {
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
+.alert-danger{
+    text-align: left;
+}
 
 .intro-message > h3,
 .intro-form > h3 {
